--- a/question_answers.html
+++ b/question_answers.html
@@ -1,4 +1,49 @@
-<table border="1" class="dataframe">
+<html>
+<head>
+<style>
+<style>
+#qatext {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+#qa {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#qa td, #qa th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#qa tr:nth-child(even){background-color: #f2f2f2;}
+
+#qa tr:hover {background-color: #ddd;}
+
+#qa th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+
+#qa thead {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+
+</style>
+</head>
+<body>
+
+<h1 style="font-family: Arial, Helvetica, sans-serif;">Q&ampA AG</h1>
+
+<table id="qa">
   <thead>
     <tr style="text-align: right;">
       <th></th>
@@ -92,3 +137,6 @@
     </tr>
   </tbody>
 </table>
+
+<body>
+</html>
